--- a/advanced-car-project/CarController/CarController/GUI.xaml
+++ b/advanced-car-project/CarController/CarController/GUI.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CarController"
         mc:Ignorable="d"
@@ -12,30 +13,30 @@
          <ColumnDefinition Width="314*"/>
       </Grid.ColumnDefinitions>
       <UserControl Loaded="UserControl_Loaded">
-         <Label Content="Communication (MyCar / CarController):" HorizontalAlignment="Center" Margin="10,10,5,0" VerticalAlignment="Top" RenderTransformOrigin="2.458,0.454" Width="508" FontFamily="Consolas" FontWeight="Bold" FontSize="11"/>
+         <Label Content="COM CHANNEL: 192.168.4.1:8080" HorizontalAlignment="Center" Margin="10,10,5,0" VerticalAlignment="Top" RenderTransformOrigin="2.458,0.454" Width="508" FontFamily="Consolas" FontWeight="Normal" Foreground="#FF0074FF"/>
       </UserControl>
-        <ListBox Name="commandsListBox" ItemsSource="{Binding}" HorizontalAlignment="Left" Height="391" Margin="10,35,0,0" VerticalAlignment="Top" Width="503" FontFamily="Consolas" FontWeight="Normal">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal" Margin="0">
-                        <TextBlock Foreground="Red" Text="{Binding Time}" Margin="0"></TextBlock>
-                        <TextBlock Foreground="Red" Text=": "  Margin="0"></TextBlock>
-                        <TextBlock Foreground="{Binding Color}" Text="{Binding Category}" Margin="0"></TextBlock>
-                        <TextBlock Foreground="{Binding Color}" Text="::" Margin="0"></TextBlock>
-                        <TextBlock Foreground="{Binding Color}" Text="{Binding Name}" Margin="0"></TextBlock>
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+      <ListBox Name="commandsListBox" ItemsSource="{Binding}" HorizontalAlignment="Left" Height="391" Margin="10,35,0,0" VerticalAlignment="Top" Width="503" FontFamily="Consolas" FontWeight="Normal">
+         <ListBox.ItemTemplate>
+            <DataTemplate>
+               <StackPanel Orientation="Horizontal" Margin="0" ToolTipService.ToolTip="{Binding Tooltip}">
+                  <TextBlock Foreground="Red" Text="{Binding Time}" Margin="0"></TextBlock>
+                  <TextBlock Foreground="Red" Text=": "  Margin="0"></TextBlock>
+                  <TextBlock Foreground="{Binding Color}" Text="{Binding Category}" Margin="0"></TextBlock>
+                  <TextBlock Foreground="{Binding Color}" Text="::" Margin="0"></TextBlock>
+                  <TextBlock Foreground="{Binding Color}" Text="{Binding Name}" Margin="0"></TextBlock>
+               </StackPanel>
+            </DataTemplate>
+         </ListBox.ItemTemplate>
+      </ListBox>
       <Label Name="hotkey_label" Content="Hotkey(s):" Grid.Column="1" HorizontalAlignment="Left" Margin="24,10,0,0" VerticalAlignment="Top" FontFamily="Consolas" RenderTransformOrigin="0.486,0.484" Width="270" Height="199"/>
-      <Button Name="stop_btn" Content="STOP" Grid.Column="1" HorizontalAlignment="Left" Margin="131,278,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FFD47575"/>
-      <Button Content="Right" Grid.Column="1" HorizontalAlignment="Left" Margin="186,278,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FF9DD397"/>
-      <Button Content="Left" Grid.Column="1" HorizontalAlignment="Left" Margin="76,278,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FF9DD397"/>
-      <Button Content="Backw." Grid.Column="1" HorizontalAlignment="Left" Margin="131,333,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FF9DD397"/>
-      <Button Content="Forw." Grid.Column="1" HorizontalAlignment="Left" Margin="131,223,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FF9DD397"/>
-      <Button Content="Light" Grid.Column="1" HorizontalAlignment="Left" Margin="76,222,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FFF1ED91" FontSize="8"/>
-      <Button Content="Info" Grid.Column="1" HorizontalAlignment="Left" Margin="186,223,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FFF1ED91" FontSize="8"/>
-      <Button Content="Turn" Grid.Column="1" HorizontalAlignment="Left" Margin="76,333,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FFF1ED91" FontSize="8"/>
-      <Button Content="Fca" Grid.Column="1" HorizontalAlignment="Left" Margin="186,333,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FFF1ED91" FontSize="8" RenderTransformOrigin="0.424,0.55"/>
+      <Button Name="stop_btn" Content="STOP" Grid.Column="1" HorizontalAlignment="Left" Margin="131,278,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FFD47575" Click="Button_Click"/>
+      <Button Name="right_btn" Content="Right" Grid.Column="1" HorizontalAlignment="Left" Margin="186,278,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FF9DD397" Click="Button_Click"/>
+      <Button Name="left_btn" Content="Left" Grid.Column="1" HorizontalAlignment="Left" Margin="76,278,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FF9DD397" Click="Button_Click"/>
+      <Button Name="backward_btn" Content="Backw." Grid.Column="1" HorizontalAlignment="Left" Margin="131,333,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FF9DD397" Click="Button_Click"/>
+      <Button Name="forward_button" Content="Forw." Grid.Column="1" HorizontalAlignment="Left" Margin="131,223,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FF9DD397" Click="Button_Click"/>
+      <Button Name="light_btn" Content="Light" Grid.Column="1" HorizontalAlignment="Left" Margin="76,222,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FFF1ED91" FontSize="8" Click="Button_Click"/>
+      <Button Name="info_btn" Content="Info" Grid.Column="1" HorizontalAlignment="Left" Margin="186,223,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FFF1ED91" FontSize="8" Click="Button_Click"/>
+      <Button Name="turn_btn" Content="Turn" Grid.Column="1" HorizontalAlignment="Left" Margin="76,333,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FFF1ED91" FontSize="8" Click="Button_Click"/>
+      <Button Name="fca_btn" Content="Fca" Grid.Column="1" HorizontalAlignment="Left" Margin="186,333,0,0" VerticalAlignment="Top" Width="50" Height="50" Background="#FFF1ED91" FontSize="8" Click="Button_Click"/>
    </Grid>
 </Window>
